--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Lotus]
-description: [Project Lotus]
+title: [Reuben's Page]
+description: [a brief overview of me]
