--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: [Reuben's Page]
-description: [a brief overview of me]
+description: [welcome to my page!]
